--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-  <head>
-    <title>Getting Started</title>
-		<link rel="stylesheet" href="./dist/index.css">
-  </head>
-  <body>
-		Hello World
-		<script src="./dist/index.bundle.js"></script>
-  </body>
+
+<head>
+  <title>Getting Started</title>
+  <link rel="stylesheet" href="./dist/style.css">
+</head>
+
+<body>
+  Hello World
+  <script src="./dist/index.js"></script>
+</body>
+
 </html>
